# book-swap

./: .env.dev  .gitignore  README.md  TODO.md  justfile  main.py  manage.py  pyproject.toml
books4books/: asgi.py  settings.py  urls.py  wsgi.py
bookswap/: asgi.py  settings.py  urls.py  wsgi.py
core/: TODO.md  admin.py  consumers.py  context_processors.py  forms.py  middleware.py  models.py  open_library.py  routing.py  urls.py  views.py
core/management/commands/: create_user_profile.py  verify_user_email.py
core/migrations/: 0001_initial.py  0002_alter_booklisting_isbn.py  0002_alter_booklisting_status.py  0002_alter_bookswap_status_alter_bookswapevent_type.py  0002_populate_common_genres.py  0002_userprofile.py  0003_booklisting_created_at.py  0003_booklisting_status.py  0003_remove_bookswap_offered_books_and_more.py  0004_alter_bookswap_status_alter_bookswapevent_type_and_more.py  0004_bookswap.py  0005_bookswap_status.py  0006_remove_bookswap_status_bookswapdecision.py  0007_rename_decision_bookswapdecision_status_and_more.py  0008_delete_bookswapdecision.py  0009_rename_proposed_on_bookswap_created_at_and_more.py  0010_bookswapevent_bookswapmessage.py  0011_alter_bookswapevent_type.py  0012_alter_bookswapevent_type.py  0013_alter_bookswap_status.py  0014_alter_bookswapevent_type.py  0015_booklisting_author.py
core/static/core/css/: base.css  global.css  reset.css
core/static/core/css/block/: block.css
core/static/core/css/utility/: utility.css
core/templates/core/: accept_swap.html  approve_pending_listings.html  base.html  book_listing_wizard.html  cancel_swap.html  complete_swap.html  decline_swap.html  delete_listing.html  edit_listing.html  edit_profile.html  index.html  listing.html  listings.html  map.html  new_listing.html  new_listing_from_isbn.html  new_listing_isbn_prompt.html  new_swap.html  profile.html  search.html  swap.html  swaps.html
core/templates/core/emails/: accepted_swap_notification.txt  proposed_swap_notification.txt
templates/account/: login.html  password_change.html  password_reset.html  signup.html
templates/allauth/elements/: button.html  form.html
templates/allauth/layouts/: base.html
templates/registration/: login.html
