[project]
name = "book-swap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-formtools>=2.5.1",
    "django-isbn-field>=0.5.3",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "djade>=1.4.0",
    "ruff>=0.11.7",
]

[tool.ruff]
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "django",
    "first-party",
    "local-folder",
]
